--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
   <body id="page-top" class="index" ng-app="mdComApp">
 
     <!-- Navigation -->
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-fixed-top" id="topNavigation">
       <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header page-scroll">
@@ -47,14 +47,14 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand page-scroll" href="#page-top">Mario-Duran.com</a>
+              <a class="navbar-brand page-scroll" href="#/">Mario-Duran.com</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                   <li class="hidden">
-                      <a href="#page-top"></a>
+                      <a href="#/"></a>
                   </li>
                   <li>
                       <a class="page-scroll" href="#portfolio">Portfolio</a>
