Finished the navController service

--- a/app/index.html
+++ b/app/index.html
@@ -56,16 +56,16 @@
                   <li class="hidden">
                       <a href="#/"></a>
                   </li>
-                  <li>
+                  <li class="PORTFOLIO">
                       <a class="page-scroll" href="#portfolio">Portfolio</a>
                   </li>
-                  <li>
+                  <li class="IDEAS">
                       <a class="page-scroll" href="#ideas">Ideas</a>
                   </li>
-                  <li>
+                  <li class="ABOUT">
                       <a class="page-scroll" href="#about">About Me</a>
                   </li>
-                  <li>
+                  <li class="CONTACT">
                       <a class="page-scroll" href="#contact">Contact</a>
                   </li>
               </ul>
