--- a/app/index.html
+++ b/app/index.html
@@ -141,6 +141,8 @@
         <script src="scripts/controllers/portfolio.js"></script>
         <script src="scripts/controllers/ideas.js"></script>
         <script src="scripts/controllers/contact.js"></script>
+        <script src="scripts/directives/showerrors.js"></script>
+        <script src="scripts/services/navigationservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
