--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Mario A. Duran, developer, programmer, Angular JS, Bootstrap">
     <meta name="author" content="Mario A. Duran">
-    <title>Mario-Duran.com || version 0.0.1 alpha</title>
+    <title>Mario-Duran.com || version 0.0.2 alpha</title>
 
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
