--- a/app/index.html
+++ b/app/index.html
@@ -38,43 +38,7 @@
   <body id="page-top" class="index" ng-app="mdComApp">
 
     <!-- Navigation -->
-  <nav class="navbar navbar-default navbar-fixed-top" id="topNavigation">
-      <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header page-scroll">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand page-scroll" href="#/">Mario-Duran.com</a>
-          </div>
-
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav navbar-right">
-                  <li class="hidden">
-                      <a href="#/"></a>
-                  </li>
-                  <li class="PORTFOLIO">
-                      <a class="page-scroll" href="#portfolio">Portfolio</a>
-                  </li>
-                  <li class="IDEAS">
-                      <a class="page-scroll" href="#ideas">Ideas</a>
-                  </li>
-                  <li class="ABOUT">
-                      <a class="page-scroll" href="#about">About Me</a>
-                  </li>
-                  <li class="CONTACT">
-                      <a class="page-scroll" href="#contact">Contact</a>
-                  </li>
-              </ul>
-          </div>
-          <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container-fluid -->
-  </nav>
+    <navigation-bar></navigation-bar>
 
     <ng-view></ng-view>
 
@@ -144,6 +108,7 @@
         <script src="scripts/controllers/contact.js"></script>
         <script src="scripts/directives/showerrors.js"></script>
         <script src="scripts/services/navigationservice.js"></script>
+        <script src="scripts/directives/navigationbar.js"></script>
         <!-- endbuild -->
 </body>
 </html>
