Added the autoscroll directive into the main ng-view

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
     <!-- Navigation -->
     <navigation-bar></navigation-bar>
 
-    <ng-view></ng-view>
+    <ng-view autoscroll></ng-view>
 
     <footer>
             <div class="container">
