--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Mario A. Duran, developer, programmer, Angular JS, Bootstrap">
     <meta name="author" content="Mario A. Duran">
-    <title>Mario-Duran.com || version 0.0.2 alpha</title>
+    <title>Mario-Duran.com || version 0.0.4 alpha</title>
 
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -54,8 +54,9 @@
                             </li>
                             <li><a href="https://www.linkedin.com/in/mario-alejandro-duran-406bb923" target="_blank"><i class="fa fa-linkedin"></i></a>
                             </li>
-
                             <li><a href="https://bitbucket.org/mario-duran/" target="_blank"><i class="fa fa-bitbucket"></i></a>
+                            </li>
+                            <li><a href="https://github.com/mario-duran" target="_blank"><i class="fa fa-github"></i></a>
                             </li>
 
                         </ul>
