--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Mario A. Duran, developer, programmer, Angular JS, Bootstrap">
     <meta name="author" content="Mario A. Duran">
-    <title>Mario-Duran.com || version 0.0.4 alpha</title>
+    <title>Mario-Duran.com || version 0.0.5 alpha</title>
 
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -33,6 +33,14 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-3719227477310761",
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
 
   <body id="page-top" class="index" ng-app="mdComApp">
@@ -46,7 +54,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <span class="copyright">Copyright &copy; Mario-Duran.com 2016</span>
+                        <span class="copyright">Copyright &copy; Mario-Duran.com 2017</span>
                     </div>
                     <div class="col-md-4">
                         <ul class="list-inline social-buttons">
